k8s/overlays/staging/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestration-app
  namespace: orchestration-staging
spec:
  template:
    spec:
      containers:
      - name: orchestration-app
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
